update docker to new template

--- a/.env.build
+++ b/.env.build
@@ -1,7 +1,8 @@
-sourceImage=hillliu/vnc-slim
-targetImage=hillliu/vnc-slim
-VERSION=0.0
-FOLDER_PREFIX=ver-
+localImage=allfunc/vnc-slim
+remoteImage=allfunc/vnc-slim
+TERRATEST=terratest
+VERSION=0.0.0
+VER_PREFIX=v
 COPY_FILES[]=install-packages.sh
 COPY_FILES[]=docker
 DOCKER_FILES[]=Dockerfile
